--- a/app/views/pages/_login_or_register_modal.html.erb
+++ b/app/views/pages/_login_or_register_modal.html.erb
@@ -3,17 +3,49 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="login">Sign up for Arelplane</h5>
+        <h5 class="modal-title">Login or register to do that</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
         <div class="modal-body">
-          <div class="text-center">
-            <h3>Join Arelplane to follow this pilot.</h3>
-          </div>
-          <div class="text-center">
-            <%= link_to "Register", new_user_registration_path, class: 'btn btn-primary' %>
+          <div class='container-fluid'>
+            <div class='row'>
+              <div class='col-12'>
+                <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                  <%= devise_error_messages! %>
+
+                  <div class="form">
+                    <%= f.label :email, class: 'light-sub-text' %>
+                    <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+                    <br>
+
+                    <%= f.label :name, class: 'light-sub-text' %>
+                    <%= f.text_field :name, class: 'form-control' %>
+                    <br>
+
+                    <%= f.label :username, class: 'light-sub-text' %>
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">@</div>
+                      </div>
+                      <%= f.text_field :username, class: 'form-control' %>
+                    </div>
+                    <br>
+
+                    <%= f.label :password, class: 'light-sub-text' %>
+                    <% if @minimum_password_length %>
+                    <em>(<%= @minimum_password_length %> characters minimum)</em>
+                    <% end %><br />
+                    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
+                  </div>
+
+                  <div class="actions">
+                    <%= f.submit "Sign Up", class: 'btn btn-primary mt-2 float-right', id: 'registerButton' %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
           </div>
         </div>
         <div class="modal-footer">
