--- a/app/views/stories/_comment_button.html.erb
+++ b/app/views/stories/_comment_button.html.erb
@@ -1,3 +1,3 @@
-<%= link_to '#', remote: true, class: "comment_button" do %>
+<span class="btn comment_button">
   <%= image_tag('icons/comment_icon.png', width: 19, height: 17) %> Comment
-<% end %>
+</span>
