create like story email and rewrite subscription controller

--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -2,8 +2,10 @@ Hello, Arel here from Arelplane. 👋 Thanks for joining, and welcome!
 
 Arelplane is a community of pilots. Feel free to look around at other pilots' pages, and if you see something cool, let the pilot know by liking their map.
 
-On a personal note, I'm a pilot working on Arelplane when on the ground. I'm always looking for ways to make Arelplane more helpful and fun, so if you have any ideas, send me a facebook message [http://m.me/arelplane] or reply to this email.
+On a personal note, I'm a pilot working on Arelplane when on the ground. I'm always looking for ways to make Arelplane more helpful and fun, so if you have any ideas, send me a message [http://m.me/arelplane] or reply to this email.
 
 Thanks again!
 
 Arel English
+
+If you don't want any emails about anything, ever, you can do that here: <%= unsubscribe_url(@user.subscription_preference.unsubscribe_token, unsubscribe: :everything) %>
