--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,7 +31,7 @@
           <button href="#" data-toggle='modal' data-target='#logbookUploadModal' class='btn btn-primary'>Add Flights</button>
         </li>
       <% else %>
-        <li class="nav-item active">
+        <li class="nav-item active mt-2">
           <a href="#" data-toggle='modal' data-target='#loginModal' class='light_link'>Login</a>
           &nbsp;<%= link_to "Register", new_user_registration_path, class: 'btn btn-primary' %>
         </li>
