--- a/app/views/user_mailer/new_follower.html.erb
+++ b/app/views/user_mailer/new_follower.html.erb
@@ -9,5 +9,5 @@
 <br>
 <br>
 
-<p style="font-size: 8px !important;">If you no longer want to recieve notifications of new followers, <%= link_to 'unsubscribe here', unsubscribe_url(@following.subscription_preference.unsubscribe_token) %>.</p>
-<p style="font-size: 8px !important;">If you don't want any emails about anything, ever, <%= link_to 'click here', unsubscribe_url(@following.subscription_preference.unsubscribe_token, unsubscribe_all: "true") %></p>
+<p style="font-size: 8px !important;">If you no longer want to recieve notifications of new followers, <%= link_to 'unsubscribe here', unsubscribe_url(@following.subscription_preference.unsubscribe_token, unsubscribe: :new_followers) %>.</p>
+<p style="font-size: 8px !important;">If you don't want any emails about anything, ever, <%= link_to 'click here', unsubscribe_url(@following.subscription_preference.unsubscribe_token, unsubscribe: :everything) %></p>
