--- a/app/views/user_mailer/new_follower.text.erb
+++ b/app/views/user_mailer/new_follower.text.erb
@@ -6,5 +6,5 @@ Harry Bliss would be proud.
 
 [https://www.youtube.com/watch?v=ihee35QrWtk]
 
-If you no longer want to recieve notifications of new followers, unsubscribe here: <%= unsubscribe_url(@following.subscription_preference.unsubscribe_token) %>
-If you don't want any emails about anything, ever, you can do that here: <%= unsubscribe_url(@following.subscription_preference.unsubscribe_token, unsubscribe_all: "true") %>
+If you no longer want to recieve notifications of new followers, unsubscribe here: <%= unsubscribe_url(@following.subscription_preference.unsubscribe_token, unsubscribe: :new_followers) %>
+If you don't want any emails about anything, ever, you can do that here: <%= unsubscribe_url(@following.subscription_preference.unsubscribe_token, unsubscribe: :everything) %>
