--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-  On a personal note, I'm a pilot working on Arelplane when on the ground. I'm always looking for ways to make Arelplane more helpful and fun, so if you have any ideas, send me a <a href="http://m.me/arelplane">facebook message</a> or reply to this email.
+  On a personal note, I'm a pilot working on Arelplane when on the ground. I'm always looking for ways to make Arelplane more helpful and fun, so if you have any ideas, send me a <a href="http://m.me/arelplane"> message</a> or reply to this email.
 </p>
 
 <p>
@@ -17,3 +17,5 @@
 <p>
   Arel English
 </p>
+
+<p style="font-size: 8px !important;">If you don't want any emails about anything, ever, <%= link_to 'click here', unsubscribe_url(@user.subscription_preference.unsubscribe_token, unsubscribe: :everything) %></p>
