emails are sending for subscribers #134

--- a/app/views/stories/comments/create.js.erb
+++ b/app/views/stories/comments/create.js.erb
@@ -1,2 +1,3 @@
+$("textarea").val('');
 $("#comments_<%= @commentable.id %>").prepend("<%=j render 'stories/comment', comment: @comment %>");
 $("#like_count_<%= @commentable.id %>").html("<%=j render 'stories/like_count', story: @commentable %>");
