--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta property="og:title" content="<%= content_for?(:title) ? content_for(:title) : 'Arelplane' %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= image_url "demo-img.png" %>" />
+    <meta property="og:image" content="<%= content_for?(:image) ? content_for(:image) : image_url('demo-img.png') %>" />
     <meta property="og:description" content="A visual logbook!" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Arelplane" />
