--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
     <meta property="og:image" content="<%= content_for?(:image) ? content_for(:image) : image_url('demo-img.png') %>" />
+    <meta property="og:image:width" content="690">
+    <meta property="og:image:height" content="300">
     <meta property="og:description" content="A visual logbook!" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Arelplane" />
