actually fixed email sending

--- a/app/views/story_mailer/new_comment.text.erb
+++ b/app/views/story_mailer/new_comment.text.erb
@@ -1,6 +1,6 @@
 You've got a new comment!
 
-<%= @commenter.username %> [<% username_url(@commenter.username) %>] just commented on your post! [<%= story_url(@story) %>]
+<%= @commenter.username %> [<%= username_url(@commenter.username) %>] just commented on your post! [<%= story_url(@story) %>]
 
 They said: <%= @comment.body %>
 
