--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,11 +3,11 @@
 </p>
 
 <p>
-  Arelplane is a community of pilots. Feel free to look around at other pilots' pages, and if you see something cool, let the pilot know by liking their map.
+  Arelplane is a community of pilots. Feel free to look around at other pilots' pages, and if you see something cool, let the pilot know by follwoing them, liking their post, or leaving a comment.
 </p>
 
 <p>
-  On a personal note, I'm a pilot working on Arelplane when on the ground. I'm always looking for ways to make Arelplane more helpful and fun, so if you have any ideas, send me a <a href="http://m.me/arelplane"> message</a> or reply to this email.
+  On a personal note, I'm a pilot working on Arelplane when on the ground. I'm always looking for ways to make Arelplane more helpful and fun, so if you have any ideas, send me a <a href="http://m.me/arelplane"> message</a>, reply to this email, or fill out my <a href="https://goo.gl/forms/mZ5l0Wp2Bxzto2J93">survey</a>.
 </p>
 
 <p>
