working on notifications

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,8 +1,16 @@
 @import "colors";
 @import "fonts";
 
-.navbar {
+#application-navbar {
   .underline {
     border-bottom: 0.25rem solid $linkColor;
+  }
+  .octicon {
+    fill: white;
+  }
+  .notifications-button {
+    -webkit-appearance: none;
+    background-color: transparent;
+    border: none;
   }
 }
