add some styling to notification bell

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -12,5 +12,11 @@
     -webkit-appearance: none;
     background-color: transparent;
     border: none;
+    cursor: pointer
+  }
+  .notifications-button:hover {
+    .octicon {
+      fill: $linkColor;
+    }
   }
 }
