notifications working. Need to fix styling and add to other models

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -12,6 +12,7 @@
     -webkit-appearance: none;
     background-color: transparent;
     border: none;
+    outline: none;
     cursor: pointer
   }
   .notifications-button:hover {
