fix styling of notification button

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,19 +5,39 @@
   .underline {
     border-bottom: 0.25rem solid $linkColor;
   }
-  .octicon {
-    fill: white;
-  }
-  .notifications-button {
-    -webkit-appearance: none;
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer
-  }
-  .notifications-button:hover {
+  .notifications {
     .octicon {
-      fill: $linkColor;
+      fill: white;
+    }
+    .button {
+      -webkit-appearance: none;
+      background-color: transparent;
+      border: none;
+      outline: none;
+      cursor: pointer
+    }
+    .count {
+      position: absolute;
+      top:-0.2rem;
+      right: -0.3rem;
+      padding: 0.1rem 0.4rem;
+      border-radius:0.15rem;
+      background: $linkColor;
+      -webkit-background-clip: padding-box;
+      font: $regular 0.8rem/1.125rem $baseFont;
+      color: white;
+      text-decoration: none;
+      opacity: 0.9;
+    }
+
+    font-size: 1rem;
+    font-weight: $regular;
+    color: $lightSubTextColor;
+
+    .button:hover {
+      .octicon {
+        fill: $linkColor;
+      }
     }
   }
 }
