--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -29,11 +29,9 @@
       text-decoration: none;
       opacity: 0.9;
     }
-
-    font-size: 1rem;
-    font-weight: $regular;
-    color: $lightSubTextColor;
-
+    .unread {
+      border-left: 0.18rem solid red;
+    }
     .button:hover {
       .octicon {
         fill: $linkColor;
