--- a/app/views/stories/_comment.html.erb
+++ b/app/views/stories/_comment.html.erb
@@ -1,7 +1,9 @@
 <div class="p-2 mt-2 mb-2">
   <hr>
-  <div>
-    <%= link_to comment.user.name, username_path(comment.user.username), class: 'username' %> <span class="timestamp ml-2"><%= time_ago_in_words(comment.created_at) %>
-  </div>
-  <%= comment.body %>
+  <a name="comment_<%= comment.id %>">
+    <div>
+      <%= link_to comment.user.name, username_path(comment.user.username), class: 'username' %> <span class="timestamp ml-2"><%= time_ago_in_words(comment.created_at) %>
+    </div>
+    <%= comment.body %>
+  </a>
 </div>
