notification badge only shows if you have notifications

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -21,3 +21,5 @@ $flagBorder: #979797;
 $feedBackground: #F2F0F0;
 $softText: #737373;
 $disabledText: #CDCDCD;
+
+$notificationBackground: #EAF8F9;
