--- a/app/views/api/v1/notifications/users/_notified.html.erb
+++ b/app/views/api/v1/notifications/users/_notified.html.erb
@@ -1,4 +1,4 @@
 <a href="#" class="dropdown-item <%= "unread" if !notification.read_at? %>">
-  Welcome to your new inbox! <br>
+  Welcome to your inbox! <br>
   New notifications will show up here
 </a>
