--- a/app/views/api/v1/notifications/stories/_liked.html.erb
+++ b/app/views/api/v1/notifications/stories/_liked.html.erb
@@ -1,5 +1,5 @@
 <%= link_to story_path(notification.notifiable), class: "dropdown-item #{"unread" if !notification.read_at?}" do %>
   <%= notification.actor.username %>
   <%= notification.action %>
-  your post
+  your <%= notification.notifiable_type.underscore.humanize.downcase %>
 <% end %>
