--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -22,4 +22,4 @@ $feedBackground: #F2F0F0;
 $softText: #737373;
 $disabledText: #CDCDCD;
 
-$notificationBackground: #EAF8F9;
+$notificationBackground: #d1ecf1;
