--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -36,20 +36,24 @@
   .dropdown-menu {
     left: auto;
     right: 0;
-    max-width: 16rem;
-    min-width: 16rem}
+    max-width: 15rem;
+    min-width: 15rem;
+    .heading {
+      padding-left: 1rem;
+    }
+  }
   .dropdown-item {
     white-space: normal;
     padding-bottom: 0.5rem;
     padding-top: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 0.5rem;
   }
   .dropdown-menu {
     .unread {
       border-left: 0.18rem solid $linkColor;
       background-color: $notificationBackground;
     }
-    a {
-      border-bottom: 1px $linkColor solid;
-    }
+    a {}
   }
 }
