--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,11 +3,21 @@
   <%= link_to 'ARELPLANE', root_path, class: "navbar-brand #{'underline' if current_page?(root_path)}" %>
   <% if current_user %>
     <ul class="notifications pr-xl-3 mr-auto">
-      <li class="nav-item btn-group" data-behavior='notifications' data-notifications='<%= render template: "api/v1/notifications/index", formats: [:json] %>'>
+      <li class="nav-item btn-group" data-behavior='notifications' data-notifications='<%= render template: "notifications/index", formats: [:json] %>'>
         <button data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-behavior="notifications-link" class="button align-bottom">
           <%= octicon "bell", height: 20, class: 'align-bottom' %> <span class="count" data-behavior='unread-count'></span>
         </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" data-behavior='notification-items'>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <!-- <heading class="heading">
+            Notifications
+          </heading>
+          <hr> -->
+          <div data-behavior='notification-items'>
+
+          </div>
+          <!-- <footer>
+            See all
+          </footer> -->
         </div>
       </li>
     </ul>
