--- a/app/views/users/home_page/_main_feed.html.erb
+++ b/app/views/users/home_page/_main_feed.html.erb
@@ -6,23 +6,35 @@
 </nav>
 <div class="tab-content" id="nav-tabContent">
   <div class="tab-pane fade show active" id="nav-all" role="tabpanel" aria-labelledby="nav-all-tab">
-    <div class="infinite-scroll" id="main-feed">
-      <%= render 'users/home_page/all_users' %>
+    <div class="news-feed" id="main-feed">
+      <%= render 'users/home_page/stories', stories: @stories %>
+    </div>
+    <div class="infinite-scrolling">
+      <%= paginate @stories, theme: 'bootstrap4' %>
     </div>
   </div>
   <div class="tab-pane fade" id="nav-followers" role="tabpanel" aria-labelledby="nav-followers-tab">
-    <div class="infinite-scroll">
-      <%= render 'users/home_page/followings', stories: @follower_stories, users: @followers %>
+    <div class="news-feed" id="followers-feed">
+      <div class='progress mt-3'>
+        <div class='progress-bar progress-bar-striped progress-bar-animated' role='progressbar' aria-valuenow='75' aria-valuemin='0' aria-valuemax='100' style='width: 100%'>
+        </div>
+      </div>
     </div>
   </div>
   <div class="tab-pane fade" id="nav-following" role="tabpanel" aria-labelledby="nav-following-tab">
-    <div class="infinite-scroll">
-      <%= render 'users/home_page/followings', stories: @following_stories, users: @following %>
+    <div class="news-feed" id="following-feed">
+      <div class='progress mt-3'>
+        <div class='progress-bar progress-bar-striped progress-bar-animated' role='progressbar' aria-valuenow='75' aria-valuemin='0' aria-valuemax='100' style='width: 100%'>
+        </div>
+      </div>
     </div>
   </div>
   <div class="tab-pane fade" id="nav-you" role="tabpanel" aria-labelledby="nav-you-tab">
-    <div class="infinite-scroll">
-      <%= render 'users/home_page/followings', stories: current_user.stories.page(params[:page]).per(10), users: nil %>
+    <div class="news-feed" id="personal-feed">
+      <div class='progress mt-3'>
+        <div class='progress-bar progress-bar-striped progress-bar-animated' role='progressbar' aria-valuenow='75' aria-valuemin='0' aria-valuemax='100' style='width: 100%'>
+        </div>
+      </div>
     </div>
   </div>
 </div>
