--- a/app/views/users/stories.js.erb
+++ b/app/views/users/stories.js.erb
@@ -1,5 +1,6 @@
 $('#<%= type %> .progress').remove();
 $("#<%= type %>").append("<%= j render 'users/home_page/stories', stories: @stories %>");
+$(".infinite-scrolling").html("<%= j paginate @stories, theme: 'bootstrap4' %>");
 <% if @stories.next_page %>
   $('.pagination').replaceWith("<%= j paginate @stories, theme: 'bootstrap4' %>");
 <% else %>
