change color of progress/loading bar in main feed

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,5 +1,7 @@
 $backgroundColor: #EEEEEE;
 $darkBackgroundColor: #191A1A;
+$btnColor: #00CED6;
+$btnHover: #00E6F0;
 
 $secondaryColor: #C2C2C2;
 $highlightColor: #F514A6;
