--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -16,8 +16,8 @@
         <div class="row">
           <div class="col-12 col-lg-6">
             <div class="mb-3">
-              <%= form.label :flight_date, 'Flight Date, e.g. dd/mm/yyyy', class: 'light-sub-text' %><br />
-              <%= form.text_field :flight_date, id: :flight_flight_date, class: 'form-control' %><br />
+              <%= form.label :flight_date, class: 'light-sub-text' %><br />
+              <%= form.date_field :flight_date, id: :flight_flight_date, class: 'form-control', value: Date.today %><br />
             </div>
           </div>
           <div class="col-12 col-lg-6">
@@ -36,12 +36,6 @@
           </div>
           <div class="col-12 col-lg-4">
             <div class="mb-3">
-              <%= form.label :destination_airport, 'Arrival Airport (ICAO)', class: 'light-sub-text' %><br />
-              <%= form.collection_select :destination_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true}, class: 'identifier_lookup', id: 'arrival_airport', style: 'width: 100%;' %>
-            </div>
-          </div>
-          <div class="col-12 col-lg-4">
-            <div class="mb-3">
               <%= label :waypoint, "Waypoints", class: 'light-sub-text' %><br />
               <%= form.fields_for :waypoints do |waypoint_fields| %>
                 <div class="waypoint_fields mb-2">
@@ -49,6 +43,12 @@
                 </div>
               <% end %>
               <a href="#" id="add_waypoint_select">Add waypoint</a>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4">
+            <div class="mb-3">
+              <%= form.label :destination_airport, 'Arrival Airport (ICAO)', class: 'light-sub-text' %><br />
+              <%= form.collection_select :destination_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true}, class: 'identifier_lookup', id: 'arrival_airport', style: 'width: 100%;' %>
             </div>
           </div>
         </div>
