add craft notepad advertisment

--- a/app/views/users/home_page/_notice_unit.html.erb
+++ b/app/views/users/home_page/_notice_unit.html.erb
@@ -1,3 +1,6 @@
 <div class="alert alert-info" role="alert">
-  Join the new Pilots of Arelplane <a href="https://www.facebook.com/groups/arelplane" target="_blank">Facebook Group</a>! It's a place to talk about this site, give feedback, request features, ask questions, or do other Arelplane related things.
+  Join the Pilots of Arelplane <a href="https://www.facebook.com/groups/arelplane" target="_blank">Facebook Group</a>! Give feedback, request features, ask questions.
+</div>
+<div class="alert alert-primary" role="alert">
+  Fly IFR? Order <a href="https://www.facebook.com/commerce/products/2187412311317076" target="_blank">CRAFT notepads!</a>
 </div>
