--- a/app/views/pages/craftpad.html.erb
+++ b/app/views/pages/craftpad.html.erb
@@ -3,9 +3,51 @@
     <div class="col-2">
     </div>
     <div class="col-8">
-      <div class="jumbotron mt-5">
-        <div class="container">
-          <h1 class="display-4">reorder your CRAFTpads <a href="https://www.facebook.com/commerce/products/2187412311317076">here</a></h1>
+      <div class="card mt-5 product-card">
+        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+        <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="https://s3.amazonaws.com/arelplane/product-photos/craftpad/FullSizeRender-1.jpeg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://s3.amazonaws.com/arelplane/product-photos/craftpad/FullSizeRender-2.jpeg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://s3.amazonaws.com/arelplane/product-photos/craftpad/FullSizeRender.jpeg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">CRAFT pad</h5>
+          <p class="card-text">Three 50 page CRAFT IFR notepads for one low price!</p>
+          <p>Write clearances like a boss with this CRAFT notepad. When you're done with the clearance, tear the sheet off and you're ready for your next clearance.</p>
+          <p>Forget scrambling to find a piece of paper, or quickly scribbling down CRAFT while trying to get ready to write your clearance. Always be ready with this handy CRAFT IFR notepad!</p>
+          <form action="your-server-side-code" method="POST">
+            <script
+              src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+              data-key="pk_07TfZt55VBI929zg71KhDrgNUvT5A"
+              data-amount="999"
+              data-name="Arelplane"
+              data-description="Example charge"
+              data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+              data-locale="auto">
+            </script>
+          </form>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
     </div>
