adjust the checkout form. Next step is to implement backend

--- a/app/views/pages/craftpad.html.erb
+++ b/app/views/pages/craftpad.html.erb
@@ -4,7 +4,6 @@
     </div>
     <div class="col-8">
       <div class="card mt-5 product-card">
-        <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
         <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -40,14 +39,15 @@
             <script
               src="https://checkout.stripe.com/checkout.js" class="stripe-button"
               data-key="pk_07TfZt55VBI929zg71KhDrgNUvT5A"
-              data-amount="999"
+              data-amount="1499"
+              data-billing-address="true"
+              data-shipping-address="true"
               data-name="Arelplane"
-              data-description="Example charge"
-              data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+              data-zip-code="true"
+              data-description="Three CRAFTpads"
               data-locale="auto">
             </script>
           </form>
-          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
       </div>
     </div>
