--- a/app/views/pages/craftpad.html.erb
+++ b/app/views/pages/craftpad.html.erb
@@ -1,9 +1,7 @@
 <div class="container-fluid" id="craftpad">
   <div class="row">
-    <div class="col-2">
-    </div>
-    <div class="col-8">
-      <div class="card mt-5 product-card">
+    <div class="col-12">
+      <div class="card mt-5 mb-5 product-card mx-auto">
         <div id="carouselExampleIndicators" class="carousel slide card-img-top" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -35,11 +33,22 @@
           <p class="card-text">Three 50 page CRAFT IFR notepads for one low price!</p>
           <p>Write clearances like a boss with this CRAFT notepad. When you're done with the clearance, tear the sheet off and you're ready for your next clearance.</p>
           <p>Forget scrambling to find a piece of paper, or quickly scribbling down CRAFT while trying to get ready to write your clearance. Always be ready with this handy CRAFT IFR notepad!</p>
-          <form action="your-server-side-code" method="POST">
+          <%= form_tag purchases_path do %>
+            <article>
+              <% if flash[:error].present? %>
+                <div id="error_explanation">
+                  <p><%= flash[:error] %></p>
+                </div>
+              <% end %>
+              <label class="amount">
+                <b>$14.99 for a package of three</b>
+              </label>
+            </article>
             <script
               src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-              data-key="pk_07TfZt55VBI929zg71KhDrgNUvT5A"
+              data-key="pk_07TfCGBsA8fSWzQ758tjXqTqdeSer"
               data-amount="1499"
+              data-email="<%= current_user.email if current_user %>"
               data-billing-address="true"
               data-shipping-address="true"
               data-name="Arelplane"
@@ -47,7 +56,7 @@
               data-description="Three CRAFTpads"
               data-locale="auto">
             </script>
-          </form>
+          <% end %>
         </div>
       </div>
     </div>
