if user shares rating, show the rating icon in the link attachment. Story description becomes the title if it exists

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,4 +1,5 @@
-<%= image @story.map_image_url %>
+<%= image @story.map_image_url || image_url('icons/rating_award.png') %>
+<%= title "#{@story.description}" %>
 
 <div class='container-fluid story-show'>
   <div class='row'>
