add specific image for rating link attachemnt

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,4 +1,4 @@
-<%= image @story.map_image_url || image_url('icons/rating_award.png') %>
+<%= image @story.map_image_url || image_url('icons/rating_award_link_attachment.png') %>
 <%= title "#{@story.description}" %>
 
 <div class='container-fluid story-show'>
