--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -3,10 +3,15 @@
 
 <div class='container-fluid story-show'>
   <div class='row'>
+    <div class="col-12 d-md-none mt-2">
+      <%= render 'users/home_page/notice_unit' %>
+    </div>
     <div class="col-3"></div>
     <div class='col-md-6 col-12 remove-lr-padding mt-4'>
       <%= render 'card', story: @story %>
     </div>
-    <div class="col-3"></div>
+    <div class="col-md-3 d-none d-md-block mt-4">
+      <%= render 'users/home_page/notice_unit' %>
+    </div>
   </div>
 </div>
