--- a/app/views/users/home_page/_notice_unit.html.erb
+++ b/app/views/users/home_page/_notice_unit.html.erb
@@ -2,5 +2,5 @@
   Join the Pilots of Arelplane <a href="https://www.facebook.com/groups/arelplane" target="_blank">Facebook Group</a>! Give feedback, request features, ask questions.
 </div>
 <div class="alert alert-primary" role="alert">
-  Fly IFR? Order <a href="https://amzn.to/2MN2BuY">CRAFT notepads!</a>
+  Copy clearances? Order <a href="https://amzn.to/2MN2BuY">Pilot notepads!</a>
 </div>
