--- a/app/assets/stylesheets/marketing_page.scss
+++ b/app/assets/stylesheets/marketing_page.scss
@@ -1,5 +1,12 @@
+@import "colors";
+
 #marketing-page {
   .container {
+    min-width: 100%;
+    vertical-align: middle;
+    text-align: center;
+  }
+  #cover-image {
     min-height: 60vh;
     min-width: 100%;
     padding: 0;
@@ -9,21 +16,41 @@
     -o-background-size: cover;
     background-size: cover;
     .layer {
-      background-color: rgba(255,255,255, 0.5);
+      background-color: rgba(6,2,24, 0.55);
       width: 100%;
       height: 60vh;
     }
   }
   .headline {
     color: white;
+    text-shadow: 3px 3px rgba(6,2,24,1);
+    text-align: center;
+    margin-top: 7rem;
+    margin-bottom: 2rem;
   }
   button {
     a {
       color: white !important;
     }
   }
+  button:hover {
+    a { color: black !important;
+    }
+  }
   .feature-callout {
-    background-color: white;
-    height: 20rem;
+    padding: 8em;
+  }
+
+  .row1 {
+    background-color: $backgroundColor;
+  }
+
+  .row2 {
+    color: white !important;
+  }
+  @media (max-width: 767px) {
+    .feature-callout {
+      padding: 2em;
+    }
   }
 }
