cesium changed their API without telling me. Fixed now

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -3,7 +3,7 @@ $(document).ready(function(){
     var MAPBOX_ACCESS_TOKEN = 'pk.eyJ1IjoiYXJlbGVuZ2xpc2giLCJhIjoiY2ptemJjdnp0MHU5ZzNrcjJqNjdncndzMSJ9.pmanP95PfBo_4GgDmcN_9Q';
     var MAPBOX_STYLE_ID = 'cj68kq87a1gqk2srsnul2iwee';
     var MAPBOX_USERNAME = 'arelenglish';
-    var defaultMap = 'https://api.mapbox.com/styles/v1/' + MAPBOX_USERNAME + '/' + MAPBOX_STYLE_ID + '/tiles/256/{z}/{x}/{y}?access_token=' + MAPBOX_ACCESS_TOKEN;
+    var defaultMap = 'https://api.mapbox.com/styles/v1/' + MAPBOX_USERNAME + '/' + MAPBOX_STYLE_ID + '/tiles/256/{z}/{x}/{y}@2x?access_token=' + MAPBOX_ACCESS_TOKEN;
     var mapboxSatellite = 'https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v9' + '/tiles/256/{z}/{x}/{y}?access_token=' + MAPBOX_ACCESS_TOKEN;
 
     var providerViewModels = [];
@@ -58,6 +58,7 @@ $(document).ready(function(){
       terrainProviderViewModels : terrainViewModels
     });
 
+    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI4OTQwMTEyZC05NzY0LTQyYjEtYWYwYi04ZjYzNzkzMThlYzkiLCJpZCI6MzgwMiwic2NvcGVzIjpbImFzciIsImdjIl0sImlhdCI6MTUzODk0NTM2M30.SxDWnMe3X-TnYGd6bYeiiZZMe9zP3Y9bu8F4O43eqSA';
     viewer.terrainProvider = Cesium.createWorldTerrain();
     // viewer.scene.globe.depthTestAgainstTerrain = true;
 
